--- a/viewfinder.cabal
+++ b/viewfinder.cabal
@@ -28,13 +28,15 @@ flag dev
 library
     exposed-modules:
         Viewfinder.Gen
-        Viewfinder.MetricDelta
+        Viewfinder.Gen.GridOffset
+        Viewfinder.Geodetic
 
     default-language: GHC2021
     build-depends:
         base >=4.17 && <5,
         geodetics >=1,
-        splitmix >=0.1 && <0.2
+        splitmix >=0.1 && <0.2,
+        transformers >=0.4 && <0.7
 
     if flag(dev)
         ghc-options:
@@ -52,8 +54,10 @@ executable viewfinder
     default-language: GHC2021
     build-depends:
         base >=4.17 && <5,
+        geodetics >=1,
         gitrev >=1.3 && <1.4,
         optparse-applicative >=0.14 && <0.19,
+        splitmix >=0.1 && <0.2,
         viewfinder
 
     if flag(dev)
