--- a/viewfinder.cabal
+++ b/viewfinder.cabal
@@ -35,12 +35,15 @@ library
     default-language: GHC2021
     build-depends:
         base >=4.17 && <5,
+        bytestring >=0.10.4 && <0.13,
+        cassava >=0.5.3.2 && <0.6,
         containers >=0.5 && <0.8,
         geodetics >=1,
         optparse-applicative >=0.14 && <0.19,
         search-algorithms >=0.3.2 && <0.4,
         splitmix >=0.1 && <0.2,
-        transformers >=0.4 && <0.7
+        transformers >=0.4 && <0.7,
+        vector >=0.8 && <0.14
 
     if flag(dev)
         ghc-options:
@@ -58,6 +61,7 @@ executable viewfinder
     default-language: GHC2021
     build-depends:
         base >=4.17 && <5,
+        bytestring >=0.10.4 && <0.13,
         geodetics >=1,
         gitrev >=1.3 && <1.4,
         optparse-applicative >=0.14 && <0.19,
